# Pokedex-Arcana-EPAM

./: .env.example  .gitignore  LICENSE  PPROMPT COMPLETO.txt  README.md  docker-compose.yml
backend/: Dockerfile  config.py  entrypoint.py  llm_client.py  main.py  pyproject.toml
backend/agents/: __init__.py  damage_calc_agent.py  dataviz_agent.py  lore_agent.py  orchestrator.py  report_agent.py  stats_agent.py  team_builder_agent.py  verification_agent.py
backend/api/: admin_router.py  rest_router.py  ws_gateway.py
backend/evaluation/: __init__.py  benchmark_queries.json  ragas_eval.py
backend/ingestion/: __init__.py  bootstrap.py  bulbapedia_ingestor.py  kaggle_ingestor.py  pdf_ingestor.py  pokeapi_ingestor.py  pokedex_entry_ingestor.py
backend/memory/: __init__.py  buffer.py  entity.py  episodic.py  manager.py
backend/models/: __init__.py  base.py  pokemon.py  ragas.py  session.py
backend/observability/: __init__.py  logging.py  tracing.py
backend/rag/: __init__.py  bm25_retriever.py  dense_retriever.py  pipeline.py  reranker.py
backend/tests/integration/: test_ragas_pipeline.py
backend/workers/: celery_app.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: AgentActivityBar.tsx  ChatPanel.tsx  MessageBubble.tsx  StreamingCursor.tsx  index.ts
frontend/src/components/layout/: MobileDrawer.tsx  PokedexShell.tsx  index.ts
frontend/src/components/pokemon/: BSTComparisonChart.tsx  EvolutionChainDiagram.tsx  PokemonCard.tsx  StatsRadarChart.tsx  TypeEffectivenessGrid.tsx  index.ts
frontend/src/design-system/: index.ts  tokens.ts  type-colors.ts
frontend/src/hooks/: index.ts  useStreamBuffer.ts  useWebSocket.ts
frontend/src/pages/: Chat.tsx  Home.tsx  Observability.tsx
frontend/src/store/: index.ts  sessionStore.ts
frontend/src/styles/: globals.css
infra/: otel-collector-config.yaml
infra/postgres/: init.sql
(+4 files in other folders)
