[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokedex-arcana-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework & async server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-socketio>=5.11.0",

    # Settings & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # LLM / agent orchestration
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.1.0",
    "llama-index>=0.10.0",
    "openai>=1.30.0",

    # Vector store & retrieval
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",

    # Cache / task queue
    "redis>=5.0.0",
    "celery>=5.4.0",

    # HTTP & resilience
    "tenacity>=8.3.0",
    "httpx>=0.27.0",

    # Data processing
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.24.0",
    "pandas>=2.2.0",

    # Visualisation
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "kaleido>=0.2.1",

    # PDF generation
    "weasyprint>=62.0",

    # Evaluation
    "ragas>=0.1.0",

    # Observability
    "structlog>=24.2.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",

    # Auth & utilities
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "thefuzz>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
